crates/analyzer/tests/snapshots/errors__ctx_undefined_create.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: `create` expects 2 arguments, but 1 was provided
  ┌─ compile_errors/ctx_undefined_create.fe:5:13
  │
5 │         Bar.create(0)
  │             ^^^^^^ - supplied 1 argument
  │             │       
  │             expects 2 arguments

error: incorrect type for argument to `Bar.create`
  ┌─ compile_errors/ctx_undefined_create.fe:5:20
  │
5 │         Bar.create(0)
  │                    ^ this has type `u256`; expected `mut Context`


